# FaceRecognitionRPi

./: CMakeLists.txt  README.md  face_rec.cpp
